--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(198, 149, 243);
+    background-color: rgb(56, 51, 61);
 
 }
 
@@ -14,4 +14,29 @@ main {
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.342);
+}
+
+h1 {
+    font-size: 2em;
+    color: rgba(14, 6, 88, 0.973);
+}
+
+h2 {
+    font-size: 1.5em;
+    color: blue;
+}
+
+img.lado {
+    float: right;
+}
+
+a {
+    text-decoration: none;
+    font-weight: bold;
+    color: blueviolet;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: blue;
 }
